--- a/snake.html
+++ b/snake.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Game</title>
+    <script src="snake.css"></script>
 </head>
 <canvas id="canvas" width="608px" height="608px"></canvas>
+
 <script src="snake.js"></script>
 </html>
